# Conways-Game-of-Life

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
benches/: benchmark_step.rs
examples/: cli_app_glider.rs  cli_app_random.rs
lib/: game_of_life_field.c  game_of_life_field.h  game_of_life_file_handler.c  game_of_life_file_handler.h  game_of_life_stepmultit.c  game_of_life_stepmultit.h  type_defs.h  util.h
src/: cli_app_game_of_life.c  lib.rs
tests/: test_glider_top_left.rs  test_serialize.rs  test_step_multit.rs
