[package]
name = "conways_game_of_life_lib_rust"
description = "Core library functionality for Conway's Game of Life."
license = "MIT"
version = "0.1.1"
edition = "2021"
authors = ["Simon"]
keywords = ["game_of_life","game","lib","simulation"]
categories = ["simulation","games","mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_pcg = "0.3.1"

[[bench]]
name = "benchmark_step"
harness = false

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[dependencies]
